crates/parser/src/snapshots/parser__tests__parse_inline_ok@0182_set_precedence_dir_prefix.ath.snap
---
source: crates/parser/src/tests.rs
description: "( set-precedence (a b) 100 )\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0182_set_precedence_dir_prefix.ath
---
SET_PRECEDENCE_DIR
  L_PAREN "("
  WHITESPACE " "
  SET_PRECEDENCE_KW "set-precedence"
  WHITESPACE " "
  L_PAREN "("
  NAME_REF
    IDENT "a"
  WHITESPACE " "
  NAME_REF
    IDENT "b"
  R_PAREN ")"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "100"
  WHITESPACE " "
  R_PAREN ")"
  WHITESPACE "\n"

