crates/parser/src/snapshots/parser__tests__parse_inline_ok@0183_set_precedence_dir_infix.ath.snap
---
source: crates/parser/src/tests.rs
description: "set-precedence (a b) 100\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0183_set_precedence_dir_infix.ath
---
SET_PRECEDENCE_DIR
  SET_PRECEDENCE_KW "set-precedence"
  WHITESPACE " "
  L_PAREN "("
  IDENTIFIER
    IDENT "a"
  WHITESPACE " "
  IDENTIFIER
    IDENT "b"
  R_PAREN ")"
  WHITESPACE " "
  IDENT_EXPR
    IDENTIFIER
      IDENT "100"
  WHITESPACE "\n"

