crates/parser/src/snapshots/parser__tests__parse_inline_ok@0185_set_precedence_dir_single.ath.snap
---
source: crates/parser/src/tests.rs
description: "set-precedence a 100\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0185_set_precedence_dir_single.ath
---
SET_PRECEDENCE_DIR
  SET_PRECEDENCE_KW "set-precedence"
  WHITESPACE " "
  NAME_REF
    IDENT "a"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "100"
  WHITESPACE "\n"

