crates/parser/src/snapshots/parser__tests__parse_inline_ok@0186_overload_dir_prefix.ath.snap
---
source: crates/parser/src/tests.rs
description: "( overload foo bar )\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0186_overload_dir_prefix.ath
---
OVERLOAD_SINGLE
  L_PAREN "("
  WHITESPACE " "
  OVERLOAD_KW "overload"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      NAME_REF
        IDENT "foo"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      NAME_REF
        IDENT "bar"
  WHITESPACE " "
  R_PAREN ")"
  WHITESPACE "\n"

