crates/parser/src/snapshots/parser__tests__parse_inline_ok@0187_overload_dir_infix.ath.snap
---
source: crates/parser/src/tests.rs
description: "overload foo bar\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0187_overload_dir_infix.ath
---
OVERLOAD_SINGLE
  OVERLOAD_KW "overload"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "foo"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "bar"
  WHITESPACE "\n"

