crates/parser/src/snapshots/parser__tests__parse_inline_ok@0188_overload_dir_multi.ath.snap
---
source: crates/parser/src/tests.rs
description: "overload (foo bar) (baz quux)\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0188_overload_dir_multi.ath
---
OVERLOAD_MULTI
  OVERLOAD_KW "overload"
  WHITESPACE " "
  PHRASE_PAIR
    L_PAREN "("
    EXPR_PHRASE
      IDENT_EXPR
        IDENTIFIER
          IDENT "foo"
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        IDENTIFIER
          IDENT "bar"
    R_PAREN ")"
  WHITESPACE " "
  PHRASE_PAIR
    L_PAREN "("
    EXPR_PHRASE
      IDENT_EXPR
        IDENTIFIER
          IDENT "baz"
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        IDENTIFIER
          IDENT "quux"
    R_PAREN ")"
  WHITESPACE "\n"

