crates/parser/src/snapshots/parser__tests__parse_ok@declare-complex-return-sort.ath.snap
---
source: crates/parser/src/tests.rs
description: "declare paired-with: (S, T) [S (Set T)] -> (Set (Pair S T)) \n                            [130 [id alist->set]]"
input_file: crates/parser/test_data/parser/ok/file/declare-complex-return-sort.ath
---
SOURCE_FILE
  DIR_STMT
    INFIX_DECLARE_DIR
      DECLARE_KW "declare"
      WHITESPACE " "
      NAME
        IDENT "paired-with"
      COLON ":"
      WHITESPACE " "
      SORT_VARS_DECL
        L_PAREN "("
        IDENT_SORT_DECL
          NAME
            IDENT "S"
        COMMA ","
        WHITESPACE " "
        IDENT_SORT_DECL
          NAME
            IDENT "T"
        R_PAREN ")"
      WHITESPACE " "
      FUNC_SORTS
        L_BRACK "["
        IDENT_SORT
          NAME_REF
            IDENT "S"
        WHITESPACE " "
        COMPOUND_SORT
          L_PAREN "("
          IDENT_SORT
            NAME_REF
              IDENT "Set"
          WHITESPACE " "
          IDENT_SORT
            NAME_REF
              IDENT "T"
          R_PAREN ")"
        R_BRACK "]"
      WHITESPACE " "
      THIN_ARROW "->"
      WHITESPACE " "
      COMPOUND_SORT
        L_PAREN "("
        IDENT_SORT
          NAME_REF
            IDENT "Set"
        WHITESPACE " "
        COMPOUND_SORT
          L_PAREN "("
          IDENT_SORT
            NAME_REF
              IDENT "Pair"
          WHITESPACE " "
          IDENT_SORT
            NAME_REF
              IDENT "S"
          WHITESPACE " "
          IDENT_SORT
            NAME_REF
              IDENT "T"
          R_PAREN ")"
        R_PAREN ")"
      WHITESPACE " \n                            "
      DECLARE_ATTRS
        L_BRACK "["
        DECLARE_ATTR
          NAME
            IDENT "130"
        WHITESPACE " "
        INPUT_TRANSFORM_DECL
          L_BRACK "["
          IDENT_EXPR
            NAME_REF
              IDENT "id"
          WHITESPACE " "
          IDENT_EXPR
            NAME_REF
              IDENT "alist->set"
          R_BRACK "]"
        R_BRACK "]"

